--- a/htmlcssjs/src/main/webapp/introduce-css/example14.html
+++ b/htmlcssjs/src/main/webapp/introduce-css/example14.html
@@ -10,10 +10,10 @@
     }
 </style>
 
+<div class="content-left">1</div>
+<div class="content-left">2</div>
+<div class="content-left">3</div>
 <div class="content-left"></div>
-<div class="content-left"></div>
-<div class="content-left"></div>
-<div class="content-left"></div>
-<div class="content-left"></div>
-<div class="content-left"></div>
-<div class="content-left"></div>
+<div class="content-left">5</div>
+<div class="content-left">6</div>
+<div class="content-left">7</div>
