--- a/htmlcssjs/src/main/webapp/introduce-css/example15.html
+++ b/htmlcssjs/src/main/webapp/introduce-css/example15.html
@@ -10,10 +10,10 @@
     }
 </style>
 
-<div class="content-right"></div>
-<div class="content-right"></div>
-<div class="content-right"></div>
-<div class="content-right"></div>
-<div class="content-right"></div>
-<div class="content-right"></div>
-<div class="content-right"></div>
+<div class="content-right">1</div>
+<div class="content-right">2</div>
+<div class="content-right">3</div>
+<div class="content-right">4</div>
+<div class="content-right">5</div>
+<div class="content-right">6</div>
+<div class="content-right">7</div>
