--- a/htmlcssjs/src/main/webapp/facebook.html
+++ b/htmlcssjs/src/main/webapp/facebook.html
@@ -179,6 +179,7 @@
                 width: 120px;
                 margin-left: 10px;
                 font-weight: bold;
+                font-size: 11pt;
             }
 
             .online-item{
