develop facebook page layout

--- a/htmlcssjs/src/main/webapp/facebook.html
+++ b/htmlcssjs/src/main/webapp/facebook.html
@@ -19,7 +19,89 @@
                     <div class="home-profile">
                         <div class="profile-image"></div>
                         <div class="profile-name">jittagorn pitakmetagoon</div>
-                        <span class="clear"></span>
+                        <div class="clear"></div>
+                    </div>
+                    <div class="clear"></div>
+                    <div class="home-navigation">
+                        <div class="navigation-item">
+                            <div class="navigation-icon"></div>
+                            <div class="navigation-name">navigation</div>
+                            <div class="clear"></div>
+                        </div>
+                        <div class="navigation-item">
+                            <div class="navigation-icon"></div>
+                            <div class="navigation-name">navigation</div>
+                            <div class="clear"></div>
+                        </div>
+                        <div class="navigation-item">
+                            <div class="navigation-icon"></div>
+                            <div class="navigation-name">navigation</div>
+                            <div class="clear"></div>
+                        </div>
+                        <div class="navigation-item">
+                            <div class="navigation-icon"></div>
+                            <div class="navigation-name">navigation</div>
+                            <div class="clear"></div>
+                        </div>
+                        <div class="navigation-item">
+                            <div class="navigation-icon"></div>
+                            <div class="navigation-name">navigation</div>
+                            <div class="clear"></div>
+                        </div>
+                    </div>
+                    <div class="home-navigation">
+                        <div class="navigation-item">
+                            <div class="navigation-icon"></div>
+                            <div class="navigation-name">navigation</div>
+                            <div class="clear"></div>
+                        </div>
+                        <div class="navigation-item">
+                            <div class="navigation-icon"></div>
+                            <div class="navigation-name">navigation</div>
+                            <div class="clear"></div>
+                        </div>
+                        <div class="navigation-item">
+                            <div class="navigation-icon"></div>
+                            <div class="navigation-name">navigation</div>
+                            <div class="clear"></div>
+                        </div>
+                        <div class="navigation-item">
+                            <div class="navigation-icon"></div>
+                            <div class="navigation-name">navigation</div>
+                            <div class="clear"></div>
+                        </div>
+                        <div class="navigation-item">
+                            <div class="navigation-icon"></div>
+                            <div class="navigation-name">navigation</div>
+                            <div class="clear"></div>
+                        </div>
+                        <div class="home-navigation">
+                        <div class="navigation-item">
+                            <div class="navigation-icon"></div>
+                            <div class="navigation-name">navigation</div>
+                            <div class="clear"></div>
+                        </div>
+                        <div class="navigation-item">
+                            <div class="navigation-icon"></div>
+                            <div class="navigation-name">navigation</div>
+                            <div class="clear"></div>
+                        </div>
+                        <div class="navigation-item">
+                            <div class="navigation-icon"></div>
+                            <div class="navigation-name">navigation</div>
+                            <div class="clear"></div>
+                        </div>
+                        <div class="navigation-item">
+                            <div class="navigation-icon"></div>
+                            <div class="navigation-name">navigation</div>
+                            <div class="clear"></div>
+                        </div>
+                        <div class="navigation-item">
+                            <div class="navigation-icon"></div>
+                            <div class="navigation-name">navigation</div>
+                            <div class="clear"></div>
+                        </div>
+                    </div>
                     </div>
                 </div>
                 <div id="newsFeed">
@@ -342,6 +424,29 @@
 
                 border : solid 1px #E0E0E0;
                 border-bottom-color : #ccc;
+            }
+
+            .home-navigation{
+                margin-top: 40px;
+            }
+
+            .home-navigation .navigation-icon{
+                width: 22px;
+                height: 22px;
+                background-color: #CED0D6;
+            }
+            
+            .navigation-item{
+                margin-bottom: 5px;
+            }
+
+            .navigation-item [class^=navigation]{
+                float: left;
+            }
+
+            .navigation-item .navigation-name{
+                width: 130px;
+                margin-left: 10px;
             }
         </style>
     </body>
