--- a/mvc/primefaces/src/main/webapp/login/index.xhtml
+++ b/mvc/primefaces/src/main/webapp/login/index.xhtml
@@ -9,15 +9,15 @@
         <title>Primefaces</title>
     </h:head>
     <h:body>
-        <h1>Menu</h1>
-        <ul>
-            <li>
-                <a href="#{facesContext.externalContext.requestContextPath}/first/">First controller</a>
-            </li>
-            <li>
-                <a href="#{facesContext.externalContext.requestContextPath}/login/">Login controller</a>
-            </li>
-        </ul>
+        <h:form>
+            username : <p:inputText value="#{loginFormCtrl.username}"/>
+            <br/>
+            password : <p:inputText value="#{loginFormCtrl.password}"/>
+            <br/>
+            <p:commandButton value="login"
+                             update="@form"
+                             actionListener="#{loginFormCtrl.onLogin()}"/>
+        </h:form>
     </h:body>
 </html>
 
