develop MVC module

--- a/mvc/primefaces/src/main/webapp/index.xhtml
+++ b/mvc/primefaces/src/main/webapp/index.xhtml
@@ -15,7 +15,13 @@
                 <a href="#{facesContext.externalContext.requestContextPath}/first/">First controller</a>
             </li>
             <li>
-                <a href="#{facesContext.externalContext.requestContextPath}/login/">Login controller</a>
+                <a href="#{facesContext.externalContext.requestContextPath}/login/">Login</a>
+            </li>
+            <li>
+                <a href="#{facesContext.externalContext.requestContextPath}/sendparam/">Send Parameter to Controller</a>
+            </li>
+            <li>
+                <a href="#{facesContext.externalContext.requestContextPath}/updateelement/">update element</a>
             </li>
         </ul>
     </h:body>
