develop MVC module

--- a/mvc/primefaces/src/main/webapp/index.xhtml
+++ b/mvc/primefaces/src/main/webapp/index.xhtml
@@ -12,10 +12,10 @@
         <h1>Menu</h1>
         <ul>
             <li>
-                <a href="#{facesContext.externalContext.requestContextPath}/first/">First controller</a>
+                <a href="#{facesContext.externalContext.requestContextPath}/oneway-binding/">One way binding</a>
             </li>
             <li>
-                <a href="#{facesContext.externalContext.requestContextPath}/login/">Login</a>
+                <a href="#{facesContext.externalContext.requestContextPath}/login/">Two way Binding</a>
             </li>
             <li>
                 <a href="#{facesContext.externalContext.requestContextPath}/sendparam/">Send Parameter to Controller</a>
