--- a/mvc/primefaces/src/main/webapp/login/index.xhtml
+++ b/mvc/primefaces/src/main/webapp/login/index.xhtml
@@ -9,6 +9,7 @@
         <title>Primefaces</title>
     </h:head>
     <h:body>
+        <h1>Two way Binding</h1>
         <h:form>
             username : <p:inputText value="#{loginFormCtrl.username}"/>
             <br/>
