--- a/mvc/primefaces/src/main/webapp/oneway-binding/index.xhtml
+++ b/mvc/primefaces/src/main/webapp/oneway-binding/index.xhtml
@@ -9,7 +9,8 @@
         <title>Primefaces</title>
     </h:head>
     <h:body>
-        #{firstCtrl.message} 
+        <h1>One way binding</h1>
+        #{oneWayBindingCtrl.message} 
     </h:body>
 </html>
 
