--- a/mvc/primefaces/src/main/webapp/sendparam/index.xhtml
+++ b/mvc/primefaces/src/main/webapp/sendparam/index.xhtml
@@ -9,6 +9,7 @@
         <title>Primefaces</title>
     </h:head>
     <h:body>
+        <h1>Send Parameter to Controller</h1>
         <h:form>
             <p:commandButton value="send param"
                              update="@form"
