--- a/mvc/primefaces/src/main/webapp/index.xhtml
+++ b/mvc/primefaces/src/main/webapp/index.xhtml
@@ -15,13 +15,22 @@
                 <a href="#{facesContext.externalContext.requestContextPath}/oneway-binding/">One way binding</a>
             </li>
             <li>
-                <a href="#{facesContext.externalContext.requestContextPath}/login/">Two way Binding</a>
+                <a href="#{facesContext.externalContext.requestContextPath}/login/">Two way binding</a>
             </li>
             <li>
-                <a href="#{facesContext.externalContext.requestContextPath}/sendparam/">Send Parameter to Controller</a>
+                <a href="#{facesContext.externalContext.requestContextPath}/sendparam/">Send parameter to controller</a>
             </li>
             <li>
-                <a href="#{facesContext.externalContext.requestContextPath}/updateelement/">update element</a>
+                <a href="#{facesContext.externalContext.requestContextPath}/updateelement/">Update element</a>
+            </li>
+            <li>
+                <a href="#{facesContext.externalContext.requestContextPath}/notification/">Notification</a>
+            </li>
+            <li>
+                <a href="#{facesContext.externalContext.requestContextPath}/datatable/">Data table</a>
+            </li>
+            <li>
+                <a href="#{facesContext.externalContext.requestContextPath}/employee/">Employee</a>
             </li>
         </ul>
     </h:body>
