--- a/mvc/primefaces/src/main/webapp/updateelement/index.xhtml
+++ b/mvc/primefaces/src/main/webapp/updateelement/index.xhtml
@@ -9,7 +9,7 @@
         <title>Primefaces</title>
     </h:head>
     <h:body>
-        <h1>Update Element</h1>
+        <h1>Update element</h1>
         <p:outputPanel id="currentTimestamp">
             current time stamp = #{updateElementCtrl.timeStamp}
         </p:outputPanel>
