develop MVC module

--- a/mvc/primefaces/src/main/webapp/index.xhtml
+++ b/mvc/primefaces/src/main/webapp/index.xhtml
@@ -30,6 +30,9 @@
                 <a href="#{facesContext.externalContext.requestContextPath}/datatable/">Data table</a>
             </li>
             <li>
+                <a href="#{facesContext.externalContext.requestContextPath}/modelviewcontroller/">Model View Controller</a>
+            </li>
+            <li>
                 <a href="#{facesContext.externalContext.requestContextPath}/employee/">Employee</a>
             </li>
         </ul>
