develop MVC module

--- a/mvc/primefaces/src/main/webapp/employee/index.xhtml
+++ b/mvc/primefaces/src/main/webapp/employee/index.xhtml
@@ -32,7 +32,7 @@
             <p:dataTable value="#{employeeCtrl.employees}"
                          rowIndexVar="counter"
                          var="item">
-                <p:column headerText="no.">
+                <p:column headerText="no." style="width: 5%">
                     #{counter + 1}
                 </p:column>
                 <p:column headerText="ชื่อ">
