develop MVC module

--- a/mvc/primefaces/src/main/webapp/index.xhtml
+++ b/mvc/primefaces/src/main/webapp/index.xhtml
@@ -38,6 +38,9 @@
             <li>
                 <a href="#{facesContext.externalContext.requestContextPath}/employee/">Employee</a>
             </li>
+            <li>
+                <a href="#{facesContext.externalContext.requestContextPath}/scope/">Scoped</a>
+            </li>
         </ul>
     </h:body>
 </html>
